# NoMenaxSky

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Game/: CMakeCache.txt  CMakeLists.txt  Game  Makefile  cmake_install.cmake  compile_commands.json
Game/assets/3d/castillo/planta1/: boss1.vox  hab1.0.mtl  hab1.0.vox  hab1.1.mtl  hab1.1.vox  hab1.10.mtl  hab1.10.vox  hab1.2.mtl  hab1.2.vox  hab1.3.mtl  hab1.3.vox  hab1.4.mtl  hab1.4.vox  hab1.5.mtl  hab1.5.vox  hab1.6.mtl  hab1.6.vox  hab1.7.mtl  hab1.7.vox  hab1.8.mtl  hab1.8.vox  hab1.9.mtl  hab1.9.vox  planta1.dae  planta1.tmx
Game/assets/3d/castillo/planta2/: nivel2.tmx  planta2.dae  planta2.tmx  planta2.tsx  planta2backup.tmx
Game/assets/3d/castillo/planta3/: nivel3.tmx  planta3.dae  planta3.tmx  planta3.tsx
Game/assets/3d/objetos/cofre/: cofre.vox
Game/assets/3d/objetos/llave/: llave.mtl  llave.vox
Game/assets/3d/objetos/palanca/: palanca.mtl  palanca.vox
Game/assets/3d/objetos/teleport/: teleport.vox
Game/assets/3d/objetos/torreDiabolica/: torre.vox
Game/assets/3d/personajes/caballero/: caballero.dae  caballero.fbx
Game/assets/3d/personajes/fantasma/: fantasma.dae  fantasma3D.mtl
Game/assets/3d/personajes/lancero/: lancero.dae  lancero.mtl
Game/assets/3d/personajes/mago/: mago.dae  mago.fbx
Game/assets/3d/personajes/manueleth/: manueleth.dae  manueleth.mtl
Game/assets/3d/personajes/masiatrix/: masiatrix.dae
Game/assets/3d/personajes/menax/: menax.dae
Game/assets/3d/personajes/torreta/: torreta.dae  torreta.mtl
Game/assets/3d/proyectiles/: proyectil_mago.dae  proyectil_mago.mtl  proyectil_torreta.dae  proyectil_torreta.mtl  proyectil_trampa.dae  proyectil_trampa.mtl
Game/assets/castle/: NoMenaxSky.tsx  floor1.tmx  floor2.tmx  floor3.tmx
Game/assets/config/: keep_enemy_away.net  keep_enemy_away2.net
Game/assets/media/fx/gaunt/warrior/: readme.txt
Game/assets/test/: char.dae  nivel1.tmx  untitled.fbx  untitled.tmx  untitled.tsx
Game/assets/tests/: char.blend  char.dae
Game/assets/tests/masiatrix/: masiatrix.dae  masiatrix.mtl
Game/assets/tests/menax/: menax.dae  menax.mtl
Game/lib/engine/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
Game/lib/engine/include/engine/components/common/: camera.h  physics.h  transform.h
Game/lib/engine/include/engine/components/three_d/: model.h
Game/lib/engine/include/engine/components/two_d/: aabb_collider.h  color_animation.h  sprite.cpp  sprite.h  sprite_animation.h  texture.h  tilemap.h
Game/lib/engine/include/engine/core/: audio_manager.h  engine.h  event_manager.h  input_manager.h  resource_manager.h  scene.h  scene_manager.h
Game/lib/engine/include/engine/events/: collision.h  ignore_collision.h  key_pressed.h  key_released.h
Game/lib/engine/include/engine/systems/three_d/: model_renderer.h
Game/lib/engine/include/engine/systems/two_d/: collider_renderer.h  color_animator.h  physics.h  sprite_animator.h  sprite_renderer.h  tilemap_renderer.h
Game/lib/engine/include/engine/utils/: rectangle.h
Game/lib/engine/src/components/common/: camera.cc  transform.cc
Game/lib/engine/src/components/three_d/: model.cc  model_impl.cc  model_impl.h
Game/lib/engine/src/components/two_d/: sprite_animation.cc  texture.cc
Game/lib/engine/src/core/: audio_manager.cc  engine.cc  input_manager.cc  scene_manager.cc
Game/lib/engine/src/systems/three_d/: model_renderer.cc
Game/lib/engine/src/systems/two_d/: collider_renderer.cc  color_animator.cc  physics.cc  sprite_animator.cc  sprite_renderer.cc  tilemap_renderer.cc
Game/lib/engine/src/utils/: shaders.cc  shaders.h
Game/src/: .Systems.h.swp  Actor.cpp  Actor.h  ActorFactory.cpp  ActorFactory.h  Components.cpp  Components.h  EntitiesCreator.cpp  EntitiesCreator.h  Game.cpp  Game.h  Main.cpp  Messages.cpp  Messages.h  Room.cpp  Room.h  Scene.cpp  Scene.h  SceneFactory.cpp  SceneFactory.h  Shaders.cpp  Shaders.h  Systems.cpp  Systems.h  Texture.cpp  Texture.h  Warrior.cpp  Warrior.h  Window.cpp  Window.h  Zombie.h  character_selection_menu.cc  character_selection_menu.h  components.cc  components.h  death_menu.cc  death_menu.h  entity_factory.cc  entity_factory.h  entity_factory_2d.cc  (+38 more)
