cmake_minimum_required(VERSION 3.7)
project(CodenamePatanius)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        Game/build/lib/gl3w/include/GL/gl3w.h
        Game/build/lib/gl3w/include/GL/glcorearb.h
        Game/build/lib/gl3w/src/gl3w.c
        Game/build/lib/glfw/src/glfw_config.h
        Game/lib/entityx/cxx11/c++11-test-__func__-N2340.cpp
        Game/lib/entityx/cxx11/c++11-test-auto-N2546.cpp
        Game/lib/entityx/cxx11/c++11-test-constexpr-N2235.cpp
        Game/lib/entityx/cxx11/c++11-test-cstdint.cpp
        Game/lib/entityx/cxx11/c++11-test-decltype-N2343.cpp
        Game/lib/entityx/cxx11/c++11-test-lambda-N2927.cpp
        Game/lib/entityx/cxx11/c++11-test-long_long-N1811.cpp
        Game/lib/entityx/cxx11/c++11-test-nullptr-N2431.cpp
        Game/lib/entityx/cxx11/c++11-test-nullptr-N2431_fail_compile.cpp
        Game/lib/entityx/cxx11/c++11-test-rvalue_references-N2118.cpp
        Game/lib/entityx/cxx11/c++11-test-sizeof_member-N2253.cpp
        Game/lib/entityx/cxx11/c++11-test-static_assert-N1720.cpp
        Game/lib/entityx/cxx11/c++11-test-static_assert-N1720_fail_compile.cpp
        Game/lib/entityx/cxx11/c++11-test-variadic_templates-N2555.cpp
        Game/lib/entityx/cxx11/demo.cpp
        Game/lib/entityx/entityx/3rdparty/catch.hpp
        Game/lib/entityx/entityx/3rdparty/simplesignal.h
        Game/lib/entityx/entityx/deps/Dependencies.h
        Game/lib/entityx/entityx/deps/Dependencies_test.cc
        Game/lib/entityx/entityx/help/NonCopyable.h
        Game/lib/entityx/entityx/help/Pool.cc
        Game/lib/entityx/entityx/help/Pool.h
        Game/lib/entityx/entityx/help/Pool_test.cc
        Game/lib/entityx/entityx/help/Timer.cc
        Game/lib/entityx/entityx/help/Timer.h
        Game/lib/entityx/entityx/tags/TagsComponent.h
        Game/lib/entityx/entityx/tags/TagsComponent_test.cc
        Game/lib/entityx/entityx/Benchmarks_test.cc
        Game/lib/entityx/entityx/config.h
        Game/lib/entityx/entityx/Entity.cc
        Game/lib/entityx/entityx/Entity.h
        Game/lib/entityx/entityx/Entity_test.cc
        Game/lib/entityx/entityx/entityx.h
        Game/lib/entityx/entityx/Event.cc
        Game/lib/entityx/entityx/Event.h
        Game/lib/entityx/entityx/Event_test.cc
        Game/lib/entityx/entityx/quick.h
        Game/lib/entityx/entityx/System.cc
        Game/lib/entityx/entityx/System.h
        Game/lib/entityx/entityx/System_test.cc
        Game/lib/entityx/examples/example.cc
        Game/lib/gl3w/src/glfw_test.c
        Game/lib/gl3w/src/glut_test.c
        Game/lib/glfw/deps/glad/glad.h
        Game/lib/glfw/deps/KHR/khrplatform.h
        Game/lib/glfw/deps/mingw/_mingw_dxhelper.h
        Game/lib/glfw/deps/mingw/dinput.h
        Game/lib/glfw/deps/mingw/xinput.h
        Game/lib/glfw/deps/vs2008/stdint.h
        Game/lib/glfw/deps/vulkan/vk_platform.h
        Game/lib/glfw/deps/vulkan/vulkan.h
        Game/lib/glfw/deps/getopt.c
        Game/lib/glfw/deps/getopt.h
        Game/lib/glfw/deps/glad.c
        Game/lib/glfw/deps/linmath.h
        Game/lib/glfw/deps/nuklear.h
        Game/lib/glfw/deps/nuklear_glfw_gl2.h
        Game/lib/glfw/deps/stb_image_write.h
        Game/lib/glfw/deps/tinycthread.c
        Game/lib/glfw/deps/tinycthread.h
        Game/lib/glfw/examples/boing.c
        Game/lib/glfw/examples/gears.c
        Game/lib/glfw/examples/heightmap.c
        Game/lib/glfw/examples/offscreen.c
        Game/lib/glfw/examples/particles.c
        Game/lib/glfw/examples/simple.c
        Game/lib/glfw/examples/splitview.c
        Game/lib/glfw/examples/wave.c
        Game/lib/glfw/include/GLFW/glfw3.h
        Game/lib/glfw/include/GLFW/glfw3native.h
        Game/lib/glfw/src/cocoa_joystick.h
        Game/lib/glfw/src/cocoa_platform.h
        Game/lib/glfw/src/cocoa_time.c
        Game/lib/glfw/src/context.c
        Game/lib/glfw/src/egl_context.c
        Game/lib/glfw/src/egl_context.h
        Game/lib/glfw/src/glx_context.c
        Game/lib/glfw/src/glx_context.h
        Game/lib/glfw/src/init.c
        Game/lib/glfw/src/input.c
        Game/lib/glfw/src/internal.h
        Game/lib/glfw/src/linux_joystick.c
        Game/lib/glfw/src/linux_joystick.h
        Game/lib/glfw/src/mir_init.c
        Game/lib/glfw/src/mir_monitor.c
        Game/lib/glfw/src/mir_platform.h
        Game/lib/glfw/src/mir_window.c
        Game/lib/glfw/src/monitor.c
        Game/lib/glfw/src/nsgl_context.h
        Game/lib/glfw/src/null_init.c
        Game/lib/glfw/src/null_joystick.c
        Game/lib/glfw/src/null_joystick.h
        Game/lib/glfw/src/null_monitor.c
        Game/lib/glfw/src/null_platform.h
        Game/lib/glfw/src/null_window.c
        Game/lib/glfw/src/osmesa_context.c
        Game/lib/glfw/src/osmesa_context.h
        Game/lib/glfw/src/posix_time.c
        Game/lib/glfw/src/posix_time.h
        Game/lib/glfw/src/posix_tls.c
        Game/lib/glfw/src/posix_tls.h
        Game/lib/glfw/src/vulkan.c
        Game/lib/glfw/src/wgl_context.c
        Game/lib/glfw/src/wgl_context.h
        Game/lib/glfw/src/win32_init.c
        Game/lib/glfw/src/win32_joystick.c
        Game/lib/glfw/src/win32_joystick.h
        Game/lib/glfw/src/win32_monitor.c
        Game/lib/glfw/src/win32_platform.h
        Game/lib/glfw/src/win32_time.c
        Game/lib/glfw/src/win32_tls.c
        Game/lib/glfw/src/win32_window.c
        Game/lib/glfw/src/window.c
        Game/lib/glfw/src/wl_init.c
        Game/lib/glfw/src/wl_monitor.c
        Game/lib/glfw/src/wl_platform.h
        Game/lib/glfw/src/wl_window.c
        Game/lib/glfw/src/x11_init.c
        Game/lib/glfw/src/x11_monitor.c
        Game/lib/glfw/src/x11_platform.h
        Game/lib/glfw/src/x11_window.c
        Game/lib/glfw/src/xkb_unicode.c
        Game/lib/glfw/src/xkb_unicode.h
        Game/lib/glfw/tests/clipboard.c
        Game/lib/glfw/tests/cursor.c
        Game/lib/glfw/tests/empty.c
        Game/lib/glfw/tests/events.c
        Game/lib/glfw/tests/gamma.c
        Game/lib/glfw/tests/glfwinfo.c
        Game/lib/glfw/tests/icon.c
        Game/lib/glfw/tests/iconify.c
        Game/lib/glfw/tests/joysticks.c
        Game/lib/glfw/tests/monitors.c
        Game/lib/glfw/tests/msaa.c
        Game/lib/glfw/tests/reopen.c
        Game/lib/glfw/tests/sharing.c
        Game/lib/glfw/tests/tearing.c
        Game/lib/glfw/tests/threads.c
        Game/lib/glfw/tests/timeout.c
        Game/lib/glfw/tests/title.c
        Game/lib/glfw/tests/vulkan.c
        Game/lib/glfw/tests/windows.c
        Game/lib/glm/glm/detail/_features.hpp
        Game/lib/glm/glm/detail/_fixes.hpp
        Game/lib/glm/glm/detail/_noise.hpp
        Game/lib/glm/glm/detail/_swizzle.hpp
        Game/lib/glm/glm/detail/_swizzle_func.hpp
        Game/lib/glm/glm/detail/_vectorize.hpp
        Game/lib/glm/glm/detail/dummy.cpp
        Game/lib/glm/glm/detail/func_common.hpp
        Game/lib/glm/glm/detail/func_exponential.hpp
        Game/lib/glm/glm/detail/func_geometric.hpp
        Game/lib/glm/glm/detail/func_integer.hpp
        Game/lib/glm/glm/detail/func_matrix.hpp
        Game/lib/glm/glm/detail/func_packing.hpp
        Game/lib/glm/glm/detail/func_trigonometric.hpp
        Game/lib/glm/glm/detail/func_vector_relational.hpp
        Game/lib/glm/glm/detail/glm.cpp
        Game/lib/glm/glm/detail/precision.hpp
        Game/lib/glm/glm/detail/setup.hpp
        Game/lib/glm/glm/detail/type_float.hpp
        Game/lib/glm/glm/detail/type_gentype.hpp
        Game/lib/glm/glm/detail/type_half.hpp
        Game/lib/glm/glm/detail/type_int.hpp
        Game/lib/glm/glm/detail/type_mat.hpp
        Game/lib/glm/glm/detail/type_mat2x2.hpp
        Game/lib/glm/glm/detail/type_mat2x3.hpp
        Game/lib/glm/glm/detail/type_mat2x4.hpp
        Game/lib/glm/glm/detail/type_mat3x2.hpp
        Game/lib/glm/glm/detail/type_mat3x3.hpp
        Game/lib/glm/glm/detail/type_mat3x4.hpp
        Game/lib/glm/glm/detail/type_mat4x2.hpp
        Game/lib/glm/glm/detail/type_mat4x3.hpp
        Game/lib/glm/glm/detail/type_mat4x4.hpp
        Game/lib/glm/glm/detail/type_vec.hpp
        Game/lib/glm/glm/detail/type_vec1.hpp
        Game/lib/glm/glm/detail/type_vec2.hpp
        Game/lib/glm/glm/detail/type_vec3.hpp
        Game/lib/glm/glm/detail/type_vec4.hpp
        Game/lib/glm/glm/gtc/bitfield.hpp
        Game/lib/glm/glm/gtc/color_space.hpp
        Game/lib/glm/glm/gtc/constants.hpp
        Game/lib/glm/glm/gtc/epsilon.hpp
        Game/lib/glm/glm/gtc/functions.hpp
        Game/lib/glm/glm/gtc/integer.hpp
        Game/lib/glm/glm/gtc/matrix_access.hpp
        Game/lib/glm/glm/gtc/matrix_integer.hpp
        Game/lib/glm/glm/gtc/matrix_inverse.hpp
        Game/lib/glm/glm/gtc/matrix_transform.hpp
        Game/lib/glm/glm/gtc/noise.hpp
        Game/lib/glm/glm/gtc/packing.hpp
        Game/lib/glm/glm/gtc/quaternion.hpp
        Game/lib/glm/glm/gtc/random.hpp
        Game/lib/glm/glm/gtc/reciprocal.hpp
        Game/lib/glm/glm/gtc/round.hpp
        Game/lib/glm/glm/gtc/type_aligned.hpp
        Game/lib/glm/glm/gtc/type_precision.hpp
        Game/lib/glm/glm/gtc/type_ptr.hpp
        Game/lib/glm/glm/gtc/ulp.hpp
        Game/lib/glm/glm/gtc/vec1.hpp
        Game/lib/glm/glm/gtx/associated_min_max.hpp
        Game/lib/glm/glm/gtx/bit.hpp
        Game/lib/glm/glm/gtx/closest_point.hpp
        Game/lib/glm/glm/gtx/color_encoding.hpp
        Game/lib/glm/glm/gtx/color_space.hpp
        Game/lib/glm/glm/gtx/color_space_YCoCg.hpp
        Game/lib/glm/glm/gtx/common.hpp
        Game/lib/glm/glm/gtx/compatibility.hpp
        Game/lib/glm/glm/gtx/component_wise.hpp
        Game/lib/glm/glm/gtx/dual_quaternion.hpp
        Game/lib/glm/glm/gtx/euler_angles.hpp
        Game/lib/glm/glm/gtx/extend.hpp
        Game/lib/glm/glm/gtx/extended_min_max.hpp
        Game/lib/glm/glm/gtx/fast_exponential.hpp
        Game/lib/glm/glm/gtx/fast_square_root.hpp
        Game/lib/glm/glm/gtx/fast_trigonometry.hpp
        Game/lib/glm/glm/gtx/gradient_paint.hpp
        Game/lib/glm/glm/gtx/handed_coordinate_space.hpp
        Game/lib/glm/glm/gtx/hash.hpp
        Game/lib/glm/glm/gtx/integer.hpp
        Game/lib/glm/glm/gtx/intersect.hpp
        Game/lib/glm/glm/gtx/io.hpp
        Game/lib/glm/glm/gtx/log_base.hpp
        Game/lib/glm/glm/gtx/matrix_cross_product.hpp
        Game/lib/glm/glm/gtx/matrix_decompose.hpp
        Game/lib/glm/glm/gtx/matrix_interpolation.hpp
        Game/lib/glm/glm/gtx/matrix_major_storage.hpp
        Game/lib/glm/glm/gtx/matrix_operation.hpp
        Game/lib/glm/glm/gtx/matrix_query.hpp
        Game/lib/glm/glm/gtx/matrix_transform_2d.hpp
        Game/lib/glm/glm/gtx/mixed_product.hpp
        Game/lib/glm/glm/gtx/norm.hpp
        Game/lib/glm/glm/gtx/normal.hpp
        Game/lib/glm/glm/gtx/normalize_dot.hpp
        Game/lib/glm/glm/gtx/number_precision.hpp
        Game/lib/glm/glm/gtx/optimum_pow.hpp
        Game/lib/glm/glm/gtx/orthonormalize.hpp
        Game/lib/glm/glm/gtx/perpendicular.hpp
        Game/lib/glm/glm/gtx/polar_coordinates.hpp
        Game/lib/glm/glm/gtx/projection.hpp
        Game/lib/glm/glm/gtx/quaternion.hpp
        Game/lib/glm/glm/gtx/range.hpp
        Game/lib/glm/glm/gtx/raw_data.hpp
        Game/lib/glm/glm/gtx/rotate_normalized_axis.hpp
        Game/lib/glm/glm/gtx/rotate_vector.hpp
        Game/lib/glm/glm/gtx/scalar_multiplication.hpp
        Game/lib/glm/glm/gtx/scalar_relational.hpp
        Game/lib/glm/glm/gtx/spline.hpp
        Game/lib/glm/glm/gtx/std_based_type.hpp
        Game/lib/glm/glm/gtx/string_cast.hpp
        Game/lib/glm/glm/gtx/transform.hpp
        Game/lib/glm/glm/gtx/transform2.hpp
        Game/lib/glm/glm/gtx/type_aligned.hpp
        Game/lib/glm/glm/gtx/type_trait.hpp
        Game/lib/glm/glm/gtx/vec_swizzle.hpp
        Game/lib/glm/glm/gtx/vector_angle.hpp
        Game/lib/glm/glm/gtx/vector_query.hpp
        Game/lib/glm/glm/gtx/wrap.hpp
        Game/lib/glm/glm/simd/common.h
        Game/lib/glm/glm/simd/exponential.h
        Game/lib/glm/glm/simd/geometric.h
        Game/lib/glm/glm/simd/integer.h
        Game/lib/glm/glm/simd/matrix.h
        Game/lib/glm/glm/simd/packing.h
        Game/lib/glm/glm/simd/platform.h
        Game/lib/glm/glm/simd/trigonometric.h
        Game/lib/glm/glm/simd/vector_relational.h
        Game/lib/glm/glm/common.hpp
        Game/lib/glm/glm/exponential.hpp
        Game/lib/glm/glm/ext.hpp
        Game/lib/glm/glm/fwd.hpp
        Game/lib/glm/glm/geometric.hpp
        Game/lib/glm/glm/glm.hpp
        Game/lib/glm/glm/integer.hpp
        Game/lib/glm/glm/mat2x2.hpp
        Game/lib/glm/glm/mat2x3.hpp
        Game/lib/glm/glm/mat2x4.hpp
        Game/lib/glm/glm/mat3x2.hpp
        Game/lib/glm/glm/mat3x3.hpp
        Game/lib/glm/glm/mat3x4.hpp
        Game/lib/glm/glm/mat4x2.hpp
        Game/lib/glm/glm/mat4x3.hpp
        Game/lib/glm/glm/mat4x4.hpp
        Game/lib/glm/glm/matrix.hpp
        Game/lib/glm/glm/packing.hpp
        Game/lib/glm/glm/trigonometric.hpp
        Game/lib/glm/glm/vec2.hpp
        Game/lib/glm/glm/vec3.hpp
        Game/lib/glm/glm/vec4.hpp
        Game/lib/glm/glm/vector_relational.hpp
        Game/lib/glm/test/bug/bug_ms_vec_static.cpp
        Game/lib/glm/test/core/core_force_pure.cpp
        Game/lib/glm/test/core/core_force_unrestricted_gentype.cpp
        Game/lib/glm/test/core/core_func_common.cpp
        Game/lib/glm/test/core/core_func_exponential.cpp
        Game/lib/glm/test/core/core_func_geometric.cpp
        Game/lib/glm/test/core/core_func_integer.cpp
        Game/lib/glm/test/core/core_func_integer_bit_count.cpp
        Game/lib/glm/test/core/core_func_integer_find_lsb.cpp
        Game/lib/glm/test/core/core_func_integer_find_msb.cpp
        Game/lib/glm/test/core/core_func_matrix.cpp
        Game/lib/glm/test/core/core_func_noise.cpp
        Game/lib/glm/test/core/core_func_packing.cpp
        Game/lib/glm/test/core/core_func_swizzle.cpp
        Game/lib/glm/test/core/core_func_trigonometric.cpp
        Game/lib/glm/test/core/core_func_vector_relational.cpp
        Game/lib/glm/test/core/core_setup_force_cxx98.cpp
        Game/lib/glm/test/core/core_setup_message.cpp
        Game/lib/glm/test/core/core_setup_precision.cpp
        Game/lib/glm/test/core/core_type_aligned.cpp
        Game/lib/glm/test/core/core_type_cast.cpp
        Game/lib/glm/test/core/core_type_ctor.cpp
        Game/lib/glm/test/core/core_type_float.cpp
        Game/lib/glm/test/core/core_type_int.cpp
        Game/lib/glm/test/core/core_type_length.cpp
        Game/lib/glm/test/core/core_type_mat2x2.cpp
        Game/lib/glm/test/core/core_type_mat2x3.cpp
        Game/lib/glm/test/core/core_type_mat2x4.cpp
        Game/lib/glm/test/core/core_type_mat3x2.cpp
        Game/lib/glm/test/core/core_type_mat3x3.cpp
        Game/lib/glm/test/core/core_type_mat3x4.cpp
        Game/lib/glm/test/core/core_type_mat4x2.cpp
        Game/lib/glm/test/core/core_type_mat4x3.cpp
        Game/lib/glm/test/core/core_type_mat4x4.cpp
        Game/lib/glm/test/core/core_type_vec1.cpp
        Game/lib/glm/test/core/core_type_vec2.cpp
        Game/lib/glm/test/core/core_type_vec3.cpp
        Game/lib/glm/test/core/core_type_vec4.cpp
        Game/lib/glm/test/external/gli/core/clear.hpp
        Game/lib/glm/test/external/gli/core/convert_func.hpp
        Game/lib/glm/test/external/gli/core/coord.hpp
        Game/lib/glm/test/external/gli/core/dummy.cpp
        Game/lib/glm/test/external/gli/core/file.hpp
        Game/lib/glm/test/external/gli/core/filter.hpp
        Game/lib/glm/test/external/gli/core/filter_compute.hpp
        Game/lib/glm/test/external/gli/core/flip.hpp
        Game/lib/glm/test/external/gli/core/mipmaps_compute.hpp
        Game/lib/glm/test/external/gli/core/storage.hpp
        Game/lib/glm/test/external/gli/core/storage_linear.hpp
        Game/lib/glm/test/external/gli/core/workaround.hpp
        Game/lib/glm/test/external/gli/clear.hpp
        Game/lib/glm/test/external/gli/comparison.hpp
        Game/lib/glm/test/external/gli/convert.hpp
        Game/lib/glm/test/external/gli/copy.hpp
        Game/lib/glm/test/external/gli/duplicate.hpp
        Game/lib/glm/test/external/gli/dx.hpp
        Game/lib/glm/test/external/gli/format.hpp
        Game/lib/glm/test/external/gli/generate_mipmaps.hpp
        Game/lib/glm/test/external/gli/gl.hpp
        Game/lib/glm/test/external/gli/gli.hpp
        Game/lib/glm/test/external/gli/image.hpp
        Game/lib/glm/test/external/gli/levels.hpp
        Game/lib/glm/test/external/gli/load.hpp
        Game/lib/glm/test/external/gli/load_dds.hpp
        Game/lib/glm/test/external/gli/load_kmg.hpp
        Game/lib/glm/test/external/gli/load_ktx.hpp
        Game/lib/glm/test/external/gli/make_texture.hpp
        Game/lib/glm/test/external/gli/reduce.hpp
        Game/lib/glm/test/external/gli/sampler.hpp
        Game/lib/glm/test/external/gli/sampler1d.hpp
        Game/lib/glm/test/external/gli/sampler1d_array.hpp
        Game/lib/glm/test/external/gli/sampler2d.hpp
        Game/lib/glm/test/external/gli/sampler2d_array.hpp
        Game/lib/glm/test/external/gli/sampler3d.hpp
        Game/lib/glm/test/external/gli/sampler_cube.hpp
        Game/lib/glm/test/external/gli/sampler_cube_array.hpp
        Game/lib/glm/test/external/gli/save.hpp
        Game/lib/glm/test/external/gli/save_dds.hpp
        Game/lib/glm/test/external/gli/save_kmg.hpp
        Game/lib/glm/test/external/gli/save_ktx.hpp
        Game/lib/glm/test/external/gli/target.hpp
        Game/lib/glm/test/external/gli/texture.hpp
        Game/lib/glm/test/external/gli/texture1d.hpp
        Game/lib/glm/test/external/gli/texture1d_array.hpp
        Game/lib/glm/test/external/gli/texture2d.hpp
        Game/lib/glm/test/external/gli/texture2d_array.hpp
        Game/lib/glm/test/external/gli/texture3d.hpp
        Game/lib/glm/test/external/gli/texture_cube.hpp
        Game/lib/glm/test/external/gli/texture_cube_array.hpp
        Game/lib/glm/test/external/gli/transform.hpp
        Game/lib/glm/test/external/gli/type.hpp
        Game/lib/glm/test/external/gli/view.hpp
        Game/lib/glm/test/gtc/gtc_bitfield.cpp
        Game/lib/glm/test/gtc/gtc_color_space.cpp
        Game/lib/glm/test/gtc/gtc_constants.cpp
        Game/lib/glm/test/gtc/gtc_epsilon.cpp
        Game/lib/glm/test/gtc/gtc_functions.cpp
        Game/lib/glm/test/gtc/gtc_integer.cpp
        Game/lib/glm/test/gtc/gtc_matrix_access.cpp
        Game/lib/glm/test/gtc/gtc_matrix_integer.cpp
        Game/lib/glm/test/gtc/gtc_matrix_inverse.cpp
        Game/lib/glm/test/gtc/gtc_matrix_transform.cpp
        Game/lib/glm/test/gtc/gtc_noise.cpp
        Game/lib/glm/test/gtc/gtc_packing.cpp
        Game/lib/glm/test/gtc/gtc_quaternion.cpp
        Game/lib/glm/test/gtc/gtc_random.cpp
        Game/lib/glm/test/gtc/gtc_reciprocal.cpp
        Game/lib/glm/test/gtc/gtc_round.cpp
        Game/lib/glm/test/gtc/gtc_type_aligned.cpp
        Game/lib/glm/test/gtc/gtc_type_precision.cpp
        Game/lib/glm/test/gtc/gtc_type_ptr.cpp
        Game/lib/glm/test/gtc/gtc_ulp.cpp
        Game/lib/glm/test/gtc/gtc_user_defined_types.cpp
        Game/lib/glm/test/gtc/gtc_vec1.cpp
        Game/lib/glm/test/gtx/gtx_associated_min_max.cpp
        Game/lib/glm/test/gtx/gtx_closest_point.cpp
        Game/lib/glm/test/gtx/gtx_color_encoding.cpp
        Game/lib/glm/test/gtx/gtx_color_space.cpp
        Game/lib/glm/test/gtx/gtx_color_space_YCoCg.cpp
        Game/lib/glm/test/gtx/gtx_common.cpp
        Game/lib/glm/test/gtx/gtx_compatibility.cpp
        Game/lib/glm/test/gtx/gtx_component_wise.cpp
        Game/lib/glm/test/gtx/gtx_dual_quaternion.cpp
        Game/lib/glm/test/gtx/gtx_euler_angle.cpp
        Game/lib/glm/test/gtx/gtx_extend.cpp
        Game/lib/glm/test/gtx/gtx_extended_min_max.cpp
        Game/lib/glm/test/gtx/gtx_extented_min_max.cpp
        Game/lib/glm/test/gtx/gtx_fast_exponential.cpp
        Game/lib/glm/test/gtx/gtx_fast_square_root.cpp
        Game/lib/glm/test/gtx/gtx_fast_trigonometry.cpp
        Game/lib/glm/test/gtx/gtx_gradient_paint.cpp
        Game/lib/glm/test/gtx/gtx_handed_coordinate_space.cpp
        Game/lib/glm/test/gtx/gtx_int_10_10_10_2.cpp
        Game/lib/glm/test/gtx/gtx_integer.cpp
        Game/lib/glm/test/gtx/gtx_intersect.cpp
        Game/lib/glm/test/gtx/gtx_io.cpp
        Game/lib/glm/test/gtx/gtx_log_base.cpp
        Game/lib/glm/test/gtx/gtx_matrix_cross_product.cpp
        Game/lib/glm/test/gtx/gtx_matrix_decompose.cpp
        Game/lib/glm/test/gtx/gtx_matrix_interpolation.cpp
        Game/lib/glm/test/gtx/gtx_matrix_major_storage.cpp
        Game/lib/glm/test/gtx/gtx_matrix_operation.cpp
        Game/lib/glm/test/gtx/gtx_matrix_query.cpp
        Game/lib/glm/test/gtx/gtx_matrix_transform_2d.cpp
        Game/lib/glm/test/gtx/gtx_mixed_product.cpp
        Game/lib/glm/test/gtx/gtx_norm.cpp
        Game/lib/glm/test/gtx/gtx_normal.cpp
        Game/lib/glm/test/gtx/gtx_normalize_dot.cpp
        Game/lib/glm/test/gtx/gtx_number_precision.cpp
        Game/lib/glm/test/gtx/gtx_optimum_pow.cpp
        Game/lib/glm/test/gtx/gtx_orthonormalize.cpp
        Game/lib/glm/test/gtx/gtx_perpendicular.cpp
        Game/lib/glm/test/gtx/gtx_polar_coordinates.cpp
        Game/lib/glm/test/gtx/gtx_projection.cpp
        Game/lib/glm/test/gtx/gtx_quaternion.cpp
        Game/lib/glm/test/gtx/gtx_random.cpp
        Game/lib/glm/test/gtx/gtx_range.cpp
        Game/lib/glm/test/gtx/gtx_rotate_normalized_axis.cpp
        Game/lib/glm/test/gtx/gtx_rotate_vector.cpp
        Game/lib/glm/test/gtx/gtx_scalar_multiplication.cpp
        Game/lib/glm/test/gtx/gtx_scalar_relational.cpp
        Game/lib/glm/test/gtx/gtx_simd_mat4.cpp
        Game/lib/glm/test/gtx/gtx_simd_vec4.cpp
        Game/lib/glm/test/gtx/gtx_spline.cpp
        Game/lib/glm/test/gtx/gtx_string_cast.cpp
        Game/lib/glm/test/gtx/gtx_type_aligned.cpp
        Game/lib/glm/test/gtx/gtx_type_trait.cpp
        Game/lib/glm/test/gtx/gtx_vec_swizzle.cpp
        Game/lib/glm/test/gtx/gtx_vector_angle.cpp
        Game/lib/glm/test/gtx/gtx_vector_query.cpp
        Game/lib/glm/test/gtx/gtx_wrap.cpp
        Game/lib/irrKlang/examples/01.HelloWorld/main.cpp
        Game/lib/irrKlang/examples/02.3DSound/main.cpp
        Game/lib/irrKlang/examples/03.MemoryPlayback/main.cpp
        Game/lib/irrKlang/examples/04.OverrideFileAccess/main.cpp
        Game/lib/irrKlang/examples/05.Effects/main.cpp
        Game/lib/irrKlang/examples/06.Recording/main.cpp
        Game/lib/irrKlang/examples/common/conio.h
        Game/lib/irrKlang/include/ik_ESoundEngineOptions.h
        Game/lib/irrKlang/include/ik_ESoundOutputDrivers.h
        Game/lib/irrKlang/include/ik_EStreamModes.h
        Game/lib/irrKlang/include/ik_IAudioRecorder.h
        Game/lib/irrKlang/include/ik_IAudioStream.h
        Game/lib/irrKlang/include/ik_IAudioStreamLoader.h
        Game/lib/irrKlang/include/ik_IFileFactory.h
        Game/lib/irrKlang/include/ik_IFileReader.h
        Game/lib/irrKlang/include/ik_IRefCounted.h
        Game/lib/irrKlang/include/ik_irrKlangTypes.h
        Game/lib/irrKlang/include/ik_ISound.h
        Game/lib/irrKlang/include/ik_ISoundDeviceList.h
        Game/lib/irrKlang/include/ik_ISoundEffectControl.h
        Game/lib/irrKlang/include/ik_ISoundEngine.h
        Game/lib/irrKlang/include/ik_ISoundMixedOutputReceiver.h
        Game/lib/irrKlang/include/ik_ISoundSource.h
        Game/lib/irrKlang/include/ik_ISoundStopEventReceiver.h
        Game/lib/irrKlang/include/ik_IVirtualRefCounted.h
        Game/lib/irrKlang/include/ik_SAudioStreamFormat.h
        Game/lib/irrKlang/include/ik_vec3d.h
        Game/lib/irrKlang/include/irrKlang.h
        Game/lib/irrKlang/plugins/ikpMP3/decoder/bits.c
        Game/lib/irrKlang/plugins/ikpMP3/decoder/internal.h
        Game/lib/irrKlang/plugins/ikpMP3/decoder/mpaudec.c
        Game/lib/irrKlang/plugins/ikpMP3/decoder/mpaudec.h
        Game/lib/irrKlang/plugins/ikpMP3/decoder/mpaudectab.h
        Game/lib/irrKlang/plugins/ikpMP3/decoder/mpegaudio.h
        Game/lib/irrKlang/plugins/ikpMP3/CIrrKlangAudioStreamLoaderMP3.cpp
        Game/lib/irrKlang/plugins/ikpMP3/CIrrKlangAudioStreamLoaderMP3.h
        Game/lib/irrKlang/plugins/ikpMP3/CIrrKlangAudioStreamMP3.cpp
        Game/lib/irrKlang/plugins/ikpMP3/CIrrKlangAudioStreamMP3.h
        Game/lib/irrKlang/plugins/ikpMP3/ikpMP3.cpp
        Game/lib/stb/deprecated/rrsprintf.h
        Game/lib/stb/deprecated/stb_image.c
        Game/lib/stb/tests/caveview/win32/SDL_windows_main.c
        Game/lib/stb/tests/caveview/cave_main.c
        Game/lib/stb/tests/caveview/cave_mesher.c
        Game/lib/stb/tests/caveview/cave_parse.c
        Game/lib/stb/tests/caveview/cave_parse.h
        Game/lib/stb/tests/caveview/cave_render.c
        Game/lib/stb/tests/caveview/caveview.h
        Game/lib/stb/tests/caveview/glext.h
        Game/lib/stb/tests/caveview/glext_list.h
        Game/lib/stb/tests/caveview/main.c
        Game/lib/stb/tests/caveview/stb_gl.h
        Game/lib/stb/tests/caveview/stb_glprog.h
        Game/lib/stb/tests/oversample/main.c
        Game/lib/stb/tests/oversample/stb_wingraph.h
        Game/lib/stb/tests/pg_test/pg_test.c
        Game/lib/stb/tests/vorbseek/vorbseek.c
        Game/lib/stb/tests/c_lexer_test.c
        Game/lib/stb/tests/grid_reachability.c
        Game/lib/stb/tests/herringbone_generator.c
        Game/lib/stb/tests/herringbone_map.c
        Game/lib/stb/tests/image_test.c
        Game/lib/stb/tests/resample_test.cpp
        Game/lib/stb/tests/resample_test_c.c
        Game/lib/stb/tests/stb.c
        Game/lib/stb/tests/stb_cpp.cpp
        Game/lib/stb/tests/stretch_test.c
        Game/lib/stb/tests/stretchy_buffer_test.c
        Game/lib/stb/tests/test_c_compilation.c
        Game/lib/stb/tests/test_cpp_compilation.cpp
        Game/lib/stb/tests/test_truetype.c
        Game/lib/stb/tests/test_vorbis.c
        Game/lib/stb/tests/textedit_sample.c
        Game/lib/stb/tests/tilemap_editor_integration_example.c
        Game/lib/stb/tools/easy_font_maker.c
        Game/lib/stb/tools/make_readme.c
        Game/lib/stb/tools/unicode.c
        Game/lib/stb/stb.h
        Game/lib/stb/stb_c_lexer.h
        Game/lib/stb/stb_connected_components.h
        Game/lib/stb/stb_divide.h
        Game/lib/stb/stb_dxt.h
        Game/lib/stb/stb_easy_font.h
        Game/lib/stb/stb_herringbone_wang_tile.h
        Game/lib/stb/stb_image.h
        Game/lib/stb/stb_image_resize.h
        Game/lib/stb/stb_image_write.h
        Game/lib/stb/stb_leakcheck.h
        Game/lib/stb/stb_perlin.h
        Game/lib/stb/stb_rect_pack.h
        Game/lib/stb/stb_sprintf.h
        Game/lib/stb/stb_textedit.h
        Game/lib/stb/stb_tilemap_editor.h
        Game/lib/stb/stb_truetype.h
        Game/lib/stb/stb_vorbis.c
        Game/lib/stb/stb_voxel_render.h
        Game/lib/stb/stretchy_buffer.h
        Game/src/Components.cpp
        Game/src/Components.h
        Game/src/Main.cpp
        Game/src/Messages.cpp
        Game/src/Messages.h
        Game/src/Room.cpp
        Game/src/Room.h
        Game/src/Shaders.cpp
        Game/src/Shaders.h
        Game/src/Systems.cpp
        Game/src/Systems.h
        Game/src/Texture.cpp
        Game/src/Texture.h
        Game/src/Window.cpp
        Game/src/Window.h)

add_executable(CodenamePatanius ${SOURCE_FILES})